front page and one of the articles

--- a/_posts/2015-10-25-thinktwice.html
+++ b/_posts/2015-10-25-thinktwice.html
@@ -2,24 +2,24 @@
 layout: post
 title:  "Think Twice Against ESPN Fantasy Projections"
 date:   2015-10-13 15:20:51 -0700
+author: Konner Macias
 categories: jekyll update
 excerpt_separator: <!-- end excerpt here -->
 ---
 
-
+<center><img class="materialboxed" src ="/assets/avg-error.png" alt=graph></center>
 <p>
     With the second week of the NFL concluding last night with a 24–10 victory for the Lions over the Giants, I decided to take a look at ESPN fantasy point projection accuracy thus far. 
-    <!-- end excerpt here -->
     ESPN is one of the leading hosts for fantasy football leagues around the country with millions of people trusting their projections to decide which players they should start. After comparing the starting point projections for each week against the actual number of points the player earned, it looks like ESPN has to step up their game.
 </p>
-<img src ="/assets/avg-error.png" alt=graph>
+<!-- end excerpt here -->
 <p>
     Having an average error percentage of 98.54%, ESPN projections for defense thus far staggers above any other position. Week 1 especially was awful with an error percentage of 108%! It’s almost as if they are spitting out projected numbers at random! According to FiveThirtyEight, week 1 had the fewest amount of “close” games in NFL history with only 3 games decided by 7 points or fewer, so it makes sense as to why defensive points were so scattered all over the place. To hurt ESPN’s credibility to predict defensive performances further, week 2 was nearly just as bad with an error percentage of 89%. Perhaps, the NFL is trending towards becoming a lopsided league like the MLB.
 </p>
 <p>
     Another interesting statistic to look at besides error percentage is ESPN’s point differential between actual and projected points.
 </p>
-<img src ="https://cdn-images-1.medium.com/max/1600/1*QnSRFkUDKXHGxpBKS8o_qw.png" alt=graph2>
+<center><img class="materialboxed" src ="https://cdn-images-1.medium.com/max/1600/1*QnSRFkUDKXHGxpBKS8o_qw.png" alt=graph2></center>
 <p>
         Across every position besides a kicker, the point differential hovers around 5 points. For some high scoring positions like a quarter back, and some good running backs, 5 points does not have much of a difference. But, compared to lower scoring positions like defense and tight end, 5 points is precious.
 </p>
