--- a/research/index.html
+++ b/research/index.html
@@ -9,23 +9,18 @@ title: Research
   <meta content="width=device-width,initial-scale=1.0" name="viewport">
   <meta content="description" name="In this tutorial, we take a look at a beautiful parallax scrolling effect in the simplest of ways, with stationary backgrounds and scrolling content.">
 
-  <!-- css -->
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto+Slab">
-  
+  <!-- css -->  
 </head>
 
 <body>
 
 <div class="wrapper">
   <main>
-      {% include header.html %}
       <center><em>Coming soon...</em></center>
   </main>
 
 </div>
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-<script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
-<script>
-      $(document).foundation();
-    </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+
 </body>
