--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@ layout: default
 
   <!-- css -->
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto+Slab">
+  <link rel="stylesheet" href="/css/style.css" type="text/css"> 
+
+  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
   
 </head>
 
@@ -19,10 +23,9 @@ layout: default
   <main>  
       <section class="module parallax parallax-1">
         <div class="container">
-          <h1>BSA</h1>
+          <h1>Bruin Sports Analytics<span class="typed"></span></h1>
         </div>
       </section>
-      {% include header.html %}
       <section class="module content">
         <center>
           <div id="abtdescription">
@@ -42,9 +45,4 @@ layout: default
       </section>
   </main>
 
-<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-<script src="https://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.js"></script>
-<script>
-      $(document).foundation();
-    </script>
 </body>
