--- a/officers/index.html
+++ b/officers/index.html
@@ -14,6 +14,8 @@ title: Officers
 
 <body>
 
+<!-- TODO: Templating for officers -->
+
 <div class="wrapper">
   <main>  
     <div class="container">
@@ -24,10 +26,10 @@ title: Officers
             <center>
             <div class="col-md-4">
               <div class="card">
-                <img src="../assets/image1.jpg" width=200 height= 100 alt="Avatar">
+                <img src="../assets/image1.jpg" width=100 height=100 alt="Avatar">
                 <div class="cardcontainer">
-                  <h4><b>John Doe</b></h4> 
-                  <p>Architect & Engineer</p> 
+                  <h4><b>Konner Macias</b></h4> 
+                  <p>President</p> 
                 </div>
               </div>
             </div>
@@ -35,8 +37,8 @@ title: Officers
               <div class="card">
                 <img src="../assets/image4.jpg" width=200 height=100 alt="Avatar">
                 <div class="cardcontainer">
-                  <h4><b>John Doe</b></h4> 
-                  <p>Architect & Engineer</p> 
+                  <h4><b>Jay Xu</b></h4> 
+                  <p>Vice President</p> 
                 </div>
               </div>
             </div>
@@ -56,8 +58,8 @@ title: Officers
                 <div class="card">
                   <img src="../assets/image1.jpg" width=200 height= 100 alt="Avatar">
                   <div class="cardcontainer">
-                    <h4><b>John Doe</b></h4> 
-                    <p>Architect & Engineer</p> 
+                    <h4><b>Akram Almohalwas</b></h4> 
+                    <p>Club Advisor</p> 
                   </div>
                 </div>
               </div>
@@ -65,8 +67,8 @@ title: Officers
                 <div class="card">
                   <img src="../assets/image4.jpg" width=200 height=100 alt="Avatar">
                   <div class="cardcontainer">
-                    <h4><b>John Doe</b></h4> 
-                    <p>Architect & Engineer</p> 
+                    <h4><b>Daniel Meier</b></h4> 
+                    <p>Blog Chair</p> 
                   </div>
                 </div>
               </div>
@@ -74,11 +76,30 @@ title: Officers
                 <div class="card">
                   <img src="../assets/image5.jpg" width=200 height=100 alt="Avatar">
                   <div class="cardcontainer">
-                    <h4><b>John Doe</b></h4> 
-                    <p>Architect & Engineer</p> 
+                    <h4><b>Kevin Chen</b></h4> 
+                    <p>Professional Chair</p> 
                   </div>
                 </div>
               </div>
+              <div class="col-md-4">
+                  <div class="card">
+                    <img src="../assets/image5.jpg" width=200 height=100 alt="Avatar">
+                    <div class="cardcontainer">
+                      <h4><b>Alex Soohoo</b></h4> 
+                      <p>Professional Chair</p> 
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                      <img src="../assets/image5.jpg" width=200 height=100 alt="Avatar">
+                      <div class="cardcontainer">
+                        <h4><b>Shirley Shi</b></h4> 
+                        <p>Marketing Chair</p> 
+                      </div>
+                    </div>
+                  </div>
+
             </div>
           </div>
           </center>
