--- a/research/index.html
+++ b/research/index.html
@@ -16,7 +16,32 @@ title: Research
 
 <div class="wrapper">
   <main>
-      <center><em>Coming soon...</em></center>
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <h1 id="abtdescription"><center><em>Coming soon...</em></center></h1>
+      <center>Check back in a couple days!</center>
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
   </main>
 
 </div>
