--- a/_posts/2017-09-19-thinktwice.html
+++ b/_posts/2017-09-19-thinktwice.html
@@ -8,7 +8,10 @@ excerpt_separator: <!-- end excerpt here -->
 excerpt: <center><img class="excerptpics" src ="/assets/avg-error.png" alt=graph></center><p>With the second week of the NFL concluding last night with a 24–10 victory for the Lions over the Giants, I decided to take a look at ESPN fantasy point projection accuracy thus far. ESPN is one of the leading hosts for fantasy football leagues around the country with millions of people trusting their projections to decide which players they should start. After comparing the starting point projections for each week against the actual number of points the player earned, it looks like ESPN has to step up their game.</p>
 ---
 
+<figure>
 <center><img class="materialboxed" src ="/assets/avg-error.png" alt=graph></center>
+<figcaption></figcaption>
+</figure>
 <p>
     With the second week of the NFL concluding last night with a 24–10 victory for the Lions over the Giants, I decided to take a look at ESPN fantasy point projection accuracy thus far. 
     ESPN is one of the leading hosts for fantasy football leagues around the country with millions of people trusting their projections to decide which players they should start. After comparing the starting point projections for each week against the actual number of points the player earned, it looks like ESPN has to step up their game.
@@ -20,7 +23,10 @@ excerpt: <center><img class="excerptpics" src ="/assets/avg-error.png" alt=graph
 <p>
     Another interesting statistic to look at besides error percentage is ESPN’s point differential between actual and projected points.
 </p>
+<figure>
 <center><img class="materialboxed" src ="https://cdn-images-1.medium.com/max/1600/1*QnSRFkUDKXHGxpBKS8o_qw.png" alt=graph2></center>
+<figcaption></figcaption>
+</figure>
 <p>
         Across every position besides a kicker, the point differential hovers around 5 points. For some high scoring positions like a quarter back, and some good running backs, 5 points does not have much of a difference. But, compared to lower scoring positions like defense and tight end, 5 points is precious.
 </p>
