--- a/officers/index.html
+++ b/officers/index.html
@@ -93,7 +93,7 @@ title: Officers
               <div class="modal-content">
                   <img class="officer-images" src="../assets/kevin.jpg" alt="Avatar">
                 <h4>Kevin Chen</h4>
-                <p class="modal-text">A​Kevin Chen is a second year student pursuing a double major in statistics and economics. Upon graduation, he wants to work in basketball analytics and dreams of a job in the NBA in the future. His hobbies and interests include basketball, tennis, soccer, watching tv and movies, and hiking and road trips.</p>
+                <p class="modal-text">AKevin Chen is a second year student pursuing a double major in statistics and economics. Upon graduation, he wants to work in basketball analytics and dreams of a job in the NBA in the future. His hobbies and interests include basketball, tennis, soccer, watching tv and movies, and hiking and road trips.</p>
               </div>
               <div class="modal-footer">
                 <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Return</a>
@@ -110,16 +110,6 @@ title: Officers
                   <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Return</a>
                 </div>
               </div>
-              <div id="modal8" class="modal">
-                  <div class="modal-content">
-                      <img class="officer-images" src="../assets/shirley.jpg" alt="Avatar">
-                    <h4>Shirley Shi</h4>
-                    <p class="modal-text"> I am second year, Applied Math and Statistics student. I am a fan of music, sports and innovation. As a tech person, I believe the power of big data and analytics will change sports. </p>
-                  </div>
-                  <div class="modal-footer">
-                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Return</a>
-                  </div>
-                </div>
 
 
 
