--- a/officers/index.html
+++ b/officers/index.html
@@ -174,7 +174,7 @@ title: Officers
                   <img class="officer-images" src="../assets/jerry.jpg" alt="Avatar">
                   <div class="cardcontainer">
                     <h4><b>Jerry Rong</b></h4> 
-                    <p>Professional Chair</p> 
+                    <p>Finance Chair</p> 
                   </div>
                   </div>
                 </div>
