--- a/officers/index.html
+++ b/officers/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Officers
+title: Officers/Members
 ---
 
 <head>
@@ -210,7 +210,389 @@ title: Officers
           </div>
           </center>
     </div>
-      
+    <div class="container">
+        <center>
+            <h1 id="abtdescription">Members</h1>
+
+
+
+
+
+
+  <!-- Modal Structure -->
+  <div id="modal8" class="modal">
+    <div class="modal-content">
+      <img class="officer-images" src="../assets/members/alexV.jpg" alt="Avatar">
+      <h4>Alex Veroulis</h4>
+      <p class="modal-text">I'm Alex Veroulis, a first-year student with the academic standing of a sophomore for the 2017-2018 academic year. My major is statistics, as I have an affinity for numbers, and AP Stats was by far the best class I took in high school. Also, I've engaged in sports my entire life; some of my favorites to play are water polo, racquetball, and golf. In addition, I follow football, basketball, hockey, soccer, and baseball, so I would love to become a data scientist in the sports world one day.</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Return</a>
+    </div>
+  </div>
+
+<div id="modal9" class="modal">
+    <div class="modal-content">
+      <img class="officer-images" src="../assets/members/benM.jpg" alt="Avatar">
+      <h4>Ben Messinger</h4>
+      <p class="modal-text">Born and raised in Porter Ranch, California, Ben has been obsessed with playing, watching, and analyzing basketball for as long as he can remember. After winning a state championship at Sierra Canyon in 2015, Ben began college at UCLA where he studies Political Science with a focus on International Relations. Ben is also passionate about his basketball-centered nonprofit, Hoops with Heart.</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Return</a>
+    </div>
+  </div>
+
+<div id="modal10" class="modal">
+    <div class="modal-content">
+      <img class="officer-images" src="../assets/members/breannaR.jpg" alt="Avatar">
+      <h4>Breanna Ramos</h4>
+      <p class="modal-text">I am a third year Statistics major at UCLA. I have played soccer for many years, so I would say it is my favorite sport; however, I also enjoy playing basketball and tennis. I love to watch baseball, football, and basketball. I have attended several Dodger, 49er, and Laker games. One day, I hope to become a data analyst for one of my favorite professional teams.</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Return</a>
+    </div>
+  </div>
+
+<div id="modal11" class="modal">
+    <div class="modal-content">
+      <img class="officer-images" src="../assets/members/bryanG.jpg" alt="Avatar">
+      <h4>Bryan Guo</h4>
+      <p class="modal-text">My name is Bryan Guo and I am a Second year Economics and Statistics double major. I am from San Francisco and my favorite are my hometown teams; Giants, Warriors and 49ers. I work for UCLA football as a operations/recruiting/ strength volunteer and for UCLA as a groundskeeper. My favorite sport is baseball while football is a close second and basketball is a close third. My ultimate goal in sports is to become a GM if a Major League Baseball team.</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Return</a>
+    </div>
+  </div>
+
+<div id="modal12" class="modal">
+    <div class="modal-content">
+      <img class="officer-images" src="../assets/members/devynF.jpg" alt="Avatar">
+      <h4>Devyn Fisher</h4>
+      <p class="modal-text">I am a first year statistics/mathematics major at UCLA and an aspiring data scientist. In addition to Bruin Sports Analytics, I am involved in the Statistics Club, the Undergraduate Mathematics Student Association, and the Regents Scholar Society. In my free time, I am a spikeball, soccer, and basketball enthusiast.</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Return</a>
+    </div>
+  </div>
+ 
+<div id="modal13" class="modal">
+    <div class="modal-content">
+      <img class="officer-images" src="../assets/members/hayleyT.jpg" alt="Avatar">
+      <h4>Hayley Todd</h4>
+      <p class="modal-text">Hi everyone! I’m Hayley and I’m a 3rd year Statistics major with a Math minor. Aside from BSA, I’m a member of VITA (which basically helps people with their taxes) and volunteering at UCLA football in their scouting department. I’ve been a competitive figure skater for about 11 years, and my favorite sports aside from that are hockey, football, and baseball! I’m from Arizona, so every year I go home with a few friends for MLB spring training, which has become a super fun tradition. Besides sports, I’m an avid music/concert fan and huge animal lover (especially for my two pit bulls at home)!</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Return</a>
+    </div>
+  </div>
+
+<div id="modal14" class="modal">
+    <div class="modal-content">
+      <img class="officer-images" src="../assets/members/joeyM.jpg" alt="Avatar">
+      <h4>Joey Maurer</h4>
+      <p class="modal-text">I am a second year Statistics major from Temecula, CA. I grew up playing and watching hockey; my favorite team is the San Jose Sharks. I also enjoy most of the other major sports, as well as college soccer and gymnastics. My additional hobbies include astronomy, SCUBA diving, and fish/reptile breeding. I hope to pursue a career in biostatistics or sports analytics, and am thrilled to be at a school like UCLA that is a powerhouse in academics and athletics.</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Return</a>
+    </div>
+  </div>
+
+<div id="modal15" class="modal">
+    <div class="modal-content">
+      <img class="officer-images" src="../assets/members/kathirI.jpg" alt="Avatar">
+      <h4>Kathir Ilango</h4>
+      <p class="modal-text">I'm Kathir and I'm a first year Computer Science and Engineering major at UCLA. I've lived in the Bay Area my whole life and I'm a massive 49ers fan. I played a lot of soccer and tennis growing up. The sports that I love to follow closely and discuss are football, basketball, tennis, boxing, and soccer.</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Return</a>
+    </div>
+  </div>
+
+<div id="modal16" class="modal">
+    <div class="modal-content">
+      <img class="officer-images" src="../assets/members/kevinH.jpg" alt="Avatar">
+      <h4>Kevin Hahn</h4>
+      <p class="modal-text">My name is Kevin Hahn, and I'm a first-year Math/Econ major and Statistics minor. My favorite sports are baseball, basketball, and tennis. Ideally, my dream job would be working for the Los Angeles Dodgers in their player development development, ultimately helping the team bring a World Series championship back to LA.</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Return</a>
+    </div>
+  </div>
+<div id="modal17" class="modal">
+    <div class="modal-content">
+      <img class="officer-images" src="../assets/members/lukasR.jpg" alt="Avatar">
+      <h4>Lukas Ronkin</h4>
+      <p class="modal-text">I’m a fourth year Statistics major and my dream is to work in an analytical department for a Major League Baseball team. My favorite sport is baseball and my favorite team is the Los Angeles Dodgers. Hopefully one day I can help the Dodgers win a World Series by crunching the numbers for the front office!</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Return</a>
+    </div>
+  </div>
+
+<div id="modal18" class="modal">
+    <div class="modal-content">
+      <img class="officer-images" src="../assets/members/meganR.png" alt="Avatar">
+      <h4>Megan Roudebesh</h4>
+      <p class="modal-text">Hey guys, so I am a 3rd year Economics major with a Statistics minor! In terms of sports, in high school I played soccer, volleyball, golf, and a couple more. However, my favorite sports to watch and go to games are definitely baseball and football (and sometimes hockey since my best friend is a diehard fan). I’m from San Diego, so go Padres! Outside of this, I am also involved in VITA, my sorority, and volunteering for UCLA football. My absolute dream would be able to work as a sports statistician some day!</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Return</a>
+    </div>
+  </div>
+
+<div id="modal19" class="modal">
+    <div class="modal-content">
+      <img class="officer-images" src="../assets/members/michaelM.jpg" alt="Avatar">
+      <h4>Michael Mendelsohn</h4>
+      <p class="modal-text">I'm a 3rd year Financial Actuarial Mathematics major. I love playing all sports, but especially tennis, soccer, and basketball. I'm really interested in how analytics could help improve performance in more obscure, fringe sports, like curling, for example. I'm currently pursuing a career as an actuary, but I've always thought being involved in the management side of sports or esports would be really fun.</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Return</a>
+    </div>
+  </div>
+<div id="modal20" class="modal">
+    <div class="modal-content">
+      <img class="officer-images" src="../assets/members/nikhilS.jpg" alt="Avatar">
+      <h4>Nikhil Sharma</h4>
+      <p class="modal-text">I am Nikhil Sharma, a second-year statistics major. I’m a huge basketball fan and love my Lakers. One day, I hope to become a Big Baller Brand Ambassador.</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Return</a>
+    </div>
+  </div>
+
+<div id="modal21" class="modal">
+    <div class="modal-content">
+      <img class="officer-images" src="../assets/members/ronaqV.jpg" alt="Avatar">
+      <h4>Ronaq Virdi</h4>
+      <p class="modal-text">Hi, I’m Ronaq, a fourth year Computer Science major. My favorite sports are basketball and football and more recently I started playing golf. I have been a lifelong Lakers fan and my dream job is to one day be the GM of an NBA team.</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Return</a>
+    </div>
+  </div>
+
+<div id="modal22" class="modal">
+    <div class="modal-content">
+      <img class="officer-images" src="../assets/members/subashR.jpg" alt="Avatar">
+      <h4>Subash Raman</h4>
+      <p class="modal-text">Hi, I'm Subash, a first-year Mathematics of Computation major. I enjoy watching and playing soccer. I closely follow the English Premier League, and am an avid supporter of Manchester City. Lately, I have also been watching basketball, specifically the UCLA men’s team. I’m not sure what my dream job is yet but I’d like for it to be one where I have the freedom to explore and analyze any topic that I am interested in.</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Return</a>
+    </div>
+  </div>
+<div id="modal23" class="modal">
+    <div class="modal-content">
+      <img class="officer-images" src="../assets/members/zaneW.jpg" alt="Avatar">
+      <h4>Zane Winston</h4>
+      <p class="modal-text">Zane is a first year-business economics student at UCLA. He has been interested in sports since a young age, and loves writing about basketball.</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Return</a>
+    </div>
+  </div>
+            <div id="cards">
+          <div class="row">
+            <div class="col s12 m6 l4">
+                <a class="modal-trigger" href="#modal8">
+              <div class="card">
+                <div class="cardcontent">
+                <img class="officer-images" src="../assets/members/alexV.jpg" alt="Avatar">
+                <div class="cardcontainer">
+                  <h4><b>Alex Veroulis</b></h4> 
+                </div>
+              </div>
+              </div>
+            </a>
+            </div>
+	<div class="col s12 m6 l4">
+                <a class="modal-trigger" href="#modal9">
+              <div class="card">
+                <div class="cardcontent">
+                <img class="officer-images" src="../assets/members/benM.jpg" alt="Avatar">
+                <div class="cardcontainer">
+                  <h4><b>Ben Messinger</b></h4> 
+                </div>
+              </div>
+              </div>
+            </a>
+            </div>
+<div class="col s12 m6 l4">
+                <a class="modal-trigger" href="#modal10">
+              <div class="card">
+                <div class="cardcontent">
+                <img class="officer-images" src="../assets/members/breannaR.jpg" alt="Avatar">
+                <div class="cardcontainer">
+                  <h4><b>Breanna Ramos</b></h4> 
+                </div>
+              </div>
+              </div>
+            </a>
+            </div>
+        <div class="col s12 m6 l4">
+                <a class="modal-trigger" href="#modal11">
+              <div class="card">
+                <div class="cardcontent">
+                <img class="officer-images" src="../assets/members/bryanG.jpg" alt="Avatar">
+                <div class="cardcontainer">
+                  <h4><b>Bryan Guo</b></h4> 
+                </div>
+              </div>
+              </div>
+            </a>
+            </div>
+<div class="col s12 m6 l4">
+                <a class="modal-trigger" href="#modal12">
+              <div class="card">
+                <div class="cardcontent">
+                <img class="officer-images" src="../assets/members/devynF.jpg" alt="Avatar">
+                <div class="cardcontainer">
+                  <h4><b>Devyn Fisher</b></h4> 
+                </div>
+              </div>
+              </div>
+            </a>
+            </div>
+        <div class="col s12 m6 l4">
+                <a class="modal-trigger" href="#modal13">
+              <div class="card">
+                <div class="cardcontent">
+                <img class="officer-images" src="../assets/members/hayleyT.jpg" alt="Avatar">
+                <div class="cardcontainer">
+                  <h4><b>Hayley Todd</b></h4> 
+                </div>
+              </div>
+              </div>
+            </a>
+            </div>
+<div class="col s12 m6 l4">
+                <a class="modal-trigger" href="#modal14">
+              <div class="card">
+                <div class="cardcontent">
+                <img class="officer-images" src="../assets/members/joeyM.jpg" alt="Avatar">
+                <div class="cardcontainer">
+                  <h4><b>Joey Maurer</b></h4> 
+                </div>
+              </div>
+              </div>
+            </a>
+            </div>
+        <div class="col s12 m6 l4">
+                <a class="modal-trigger" href="#modal15">
+              <div class="card">
+                <div class="cardcontent">
+                <img class="officer-images" src="../assets/members/kathirI.jpg" alt="Avatar">
+                <div class="cardcontainer">
+                  <h4><b>Kathir Ilango</b></h4> 
+                </div>
+              </div>
+              </div>
+            </a>
+            </div>
+<div class="col s12 m6 l4">
+                <a class="modal-trigger" href="#modal16">
+              <div class="card">
+                <div class="cardcontent">
+                <img class="officer-images" src="../assets/members/kevinH.jpg" alt="Avatar">
+                <div class="cardcontainer">
+                  <h4><b>Kevin Hahn</b></h4> 
+                </div>
+              </div>
+              </div>
+            </a>
+            </div>
+        <div class="col s12 m6 l4">
+                <a class="modal-trigger" href="#modal17">
+              <div class="card">
+                <div class="cardcontent">
+                <img class="officer-images" src="../assets/members/lukasR.jpg" alt="Avatar">
+                <div class="cardcontainer">
+                  <h4><b>Lukas Ronkin</b></h4> 
+                </div>
+              </div>
+              </div>
+            </a>
+            </div>
+<div class="col s12 m6 l4">
+                <a class="modal-trigger" href="#modal18">
+              <div class="card">
+                <div class="cardcontent">
+                <img class="officer-images" src="../assets/members/meganR.png" alt="Avatar">
+                <div class="cardcontainer">
+                  <h4><b>Megan Roudebesh</b></h4> 
+                </div>
+              </div>
+              </div>
+            </a>
+            </div>
+        <div class="col s12 m6 l4">
+                <a class="modal-trigger" href="#modal19">
+              <div class="card">
+                <div class="cardcontent">
+                <img class="officer-images" src="../assets/members/michaelM.jpg" alt="Avatar">
+                <div class="cardcontainer">
+                  <h4><b>Michael Mendelsohn</b></h4> 
+                </div>
+              </div>
+              </div>
+            </a>
+            </div>
+<div class="col s12 m6 l4">
+                <a class="modal-trigger" href="#modal20">
+              <div class="card">
+                <div class="cardcontent">
+                <img class="officer-images" src="../assets/members/nikhilS.jpg" alt="Avatar">
+                <div class="cardcontainer">
+                  <h4><b>Nikhil Sharma</b></h4> 
+                </div>
+              </div>
+              </div>
+            </a>
+            </div>
+        <div class="col s12 m6 l4">
+                <a class="modal-trigger" href="#modal21">
+              <div class="card">
+                <div class="cardcontent">
+                <img class="officer-images" src="../assets/members/ronaqV.jpg" alt="Avatar">
+                <div class="cardcontainer">
+                  <h4><b>Ronaq Virdi</b></h4> 
+                </div>
+              </div>
+              </div>
+            </a>
+            </div>
+<div class="col s12 m6 l4">
+                <a class="modal-trigger" href="#modal22">
+              <div class="card">
+                <div class="cardcontent">
+                <img class="officer-images" src="../assets/members/subashR.jpg" alt="Avatar">
+                <div class="cardcontainer">
+                  <h4><b>Subash Raman</b></h4> 
+                </div>
+              </div>
+              </div>
+            </a>
+            </div>
+        <div class="col s12 m6 l4">
+                <a class="modal-trigger" href="#modal23">
+              <div class="card">
+                <div class="cardcontent">
+                <img class="officer-images" src="../assets/members/zaneW.jpg" alt="Avatar">
+                <div class="cardcontainer">
+                  <h4><b>Zane Winston</b></h4> 
+                </div>
+              </div>
+              </div>
+            </a>
+            </div>
+
+	</div>  
+          </div>
+          </center>
+    </div>
+
+</div>      
   </main>
 
 </div>
