added papers, and animated cards

--- a/index.html
+++ b/index.html
@@ -23,7 +23,21 @@ layout: default
   <main>  
       <section class="module parallax parallax-1">
         <div class="container">
-          <h1>Bruin Sports Analytics<span class="typed"></span></h1>
+          <h1>Bruin Sports Analytics</h1>
+          <!-- <form name="newsletter" method="POST" netlify> 
+              <p>
+                <label>Your Name: <input type="text" name="name"></label>   
+              </p>
+              <p>
+                <label>Your Email: <input type="email" name="email"></label>
+              </p>
+              <p>
+                <label>Message: <textarea name="message"></textarea></label>
+              </p>
+              <p>
+                <button type="submit">Send</button>
+              </p>
+            </form> -->
         </div>
       </section>
       <section class="module content">
