--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@ layout: default
             <p>
                 If you are interested in learning more about what we do, please contact us <a href= "mailto:bruinsportsanalyticsclub@gmail.com">here!</a>
             </p>
+	
+	<p>
+	    To subscribe to our newsletter, enter your email here:
+	</p>
+
+<form action="./form-to-email.php">
+  <input type="text" name="email">
+  <input type="submit">
+</form>
           </div>
           </div>
         </center>
