another research paper

--- a/research/index.html
+++ b/research/index.html
@@ -72,6 +72,26 @@ title: Research
             </div>
         </div>
 
+	<div class="col s12 m12 l6">
+        <div class="card horizontal">
+            <div class="card-image thumbnail">
+              <img src="../assets/researchpapers/thumbnails/fantasy.png">
+            </div>
+            <div class="card-stacked">
+              <div class="card-content">
+                <h5>
+                    Basketball on a Budget
+                </h5>
+                <p class="paper-description">This paper presents a possible solution to the old of problem of creating the best possible performing sports team while at the same time minimizing the cost of the team.</p>
+              </div>
+              <div class="card-action">
+                <a href="../assets/researchpapers/pdfs/fantasy.pdf">Read More</a>
+              </div>
+            </div>
+          </div>
+      </div>
+
+
     </div>
     </main>
   
