minor edits for defChamps

--- a/_posts/2018-05-22-defChamp.html
+++ b/_posts/2018-05-22-defChamp.html
@@ -159,7 +159,7 @@ excerpt: <img class="excerptpics" src ="/assets/defense/cover.jpg" alt="2004 Pis
     <figcaption></figcaption>
 </figure>
 
-<p>This model will help choose what factors help teams in the conference finals advance to the championship finals.  The sample size only includes teams that made it into their conference finals.</p>
+<p>This model will help identify what factors assist teams in the conference finals advance to the championship finals.  The sample size only includes teams that made it into their conference finals.</p>
 
 <p>Almost all the defensive measures had a significant role in a team’s wins while only one offensive factor was deemed notable. Conference final matchups involve the top two teams within each conference battling it out and usually these lineups consist of superstars who can score at will. As a result, the different offensive factors are not as remarkable since teams will usually find a way to attain points.  However, defensive effort can vary for each team depending on the roster assembled and coach’s personal style. Defensive plays such as forcing a turnover or a clutch block can swing the outcome of a tightly contested game.</p>
 
@@ -200,6 +200,6 @@ excerpt: <img class="excerptpics" src ="/assets/defense/cover.jpg" alt="2004 Pis
 
 <p>
     <i>All analytics computed in R</i> </br>
-    <i>Graphics Produced in Tableau</i>
+    <i>Graphics produced in Tableau</i>
 </p>
 
