--- a/officers/index.html
+++ b/officers/index.html
@@ -26,7 +26,7 @@ title: Officers/Members
     <div class="modal-content">
       <img class="officer-images" src="../assets/konner.jpg" alt="Avatar">
       <h4>Konner Macias</h4>
-      <p class="modal-text">I’m a third year Mathematics of Computer major and a Statistics minor at UCLA. I’m from the Sacramento Area and have grown up with sports my whole life. I mainly played junior competitive tennis and got good enough to receive some DII scholarships, but school will always come first! I am now the Team Captain of UCLA’s Competitive Club Tennis Team, and with a love for data science, I decided to combine my passions by creating Bruin Sports Analytics! If you see me around town, please make sure to say hi!</p>
+      <p class="modal-text">I’m a third year Mathematics of Computation major and a Statistics minor at UCLA. I’m from the Sacramento Area and have grown up with sports my whole life. I mainly played junior competitive tennis and got good enough to receive some DII scholarships, but school will always come first! I am now the Team Captain of UCLA’s Competitive Club Tennis Team, and with a love for data science, I decided to combine my passions by creating Bruin Sports Analytics! If you see me around town, please make sure to say hi!</p>
     </div>
     <div class="modal-footer">
       <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Return</a>
