quick vegas edit

--- a/_posts/2018-06-08-vegasGK.html
+++ b/_posts/2018-06-08-vegasGK.html
@@ -5,7 +5,7 @@ date:   2018-06-08 00:00:20 -0700
 author: Joey Maurer
 categories: jekyll update
 excerpt_separator: <!-- end excerpt here -->
-excerpt: <center><img class="excerptpics" src ="/assets/vegas/cover.jpg" alt="golden knights"></center>The Associated Press<figcaption></figcaption><p>This wasn’t supposed to happen. The first major professional sports team to ever grace the city of Las Vegas wasn’t supposed to be this good. Hockey wasn’t meant to be played in the desert. A team full of disposable parts and cast-offs wasn’t supposed to mesh this well together. It must be a fluke.</p>
+excerpt: <center><img class="excerptpics" src ="/assets/vegas/cover.jpg" alt="golden knights"></center><figcaption>The Associated Press</figcaption><p>This wasn’t supposed to happen. The first major professional sports team to ever grace the city of Las Vegas wasn’t supposed to be this good. Hockey wasn’t meant to be played in the desert. A team full of disposable parts and cast-offs wasn’t supposed to mesh this well together. It must be a fluke.</p>
 ---
 <figure>
     <center><img class="materialboxed responsive-img" src ="/assets/vegas/cover.jpg" alt="golden knights"></center>
