start of authors

--- a/_posts/2017-08-29-kershawless.html
+++ b/_posts/2017-08-29-kershawless.html
@@ -2,7 +2,7 @@
 layout: post
 title:  "The Kershaw-less Dodgers: A Not So Dark Time…"
 date:   2017-08-29 15:20:51 -0700
-author: Konner Macias
+author: konner_macias
 categories: jekyll update
 excerpt_separator: <!-- end excerpt here -->
 excerpt: <center><img class="excerptpics" src ="/assets/kershaw1.png" alt="Win percentage"></center><p>As the Los Angeles Dodgers end the month of August, they are still the heavy favorite to win the World Series. Since July 23rd, 2017, Clayton Kershaw has not played one game for the Dodgers. Many fans thought the absence of their star pitcher would be devastating to their pace to break the MLB record for best win percentage. While his back injury should of been disastrous, it appears at though the Dodgers are doing just fine without Clayton.</p>
